Obje olarak hataları dizi halinde çıktı verme denemesi.

--- a/Nlabs.Result/Nlabs.Result.csproj
+++ b/Nlabs.Result/Nlabs.Result.csproj
@@ -13,6 +13,7 @@
     <RepositoryUrl>https://github.com/NlabsNugetPackages/ResultPackage.git</RepositoryUrl>
     <PackAsTool>True</PackAsTool>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
